# kapsule-incus-manager

./: ARCHITECTURE.md
.github/workflows/: ci.yml
kapsule-incus-manager/: README.md
kapsule-incus-manager/.devcontainer/: devcontainer.json
kapsule-incus-manager/api/schema/: openapi.yaml
kapsule-incus-manager/api/schema/dbus/: org.KapsuleIncusManager.xml
kapsule-incus-manager/cli/: pyproject.toml
kapsule-incus-manager/cli/kim/cli/: client.py  main.py
kapsule-incus-manager/cli/tests/: test_cli.py
kapsule-incus-manager/daemon/: pyproject.toml
kapsule-incus-manager/daemon/kim/: main.py
kapsule-incus-manager/daemon/kim/api/dbus/: service.py
kapsule-incus-manager/daemon/kim/api/rest/: app.py  cluster.py  events.py  images.py  instances.py  networks.py  operations.py  profiles.py  projects.py  provisioning.py  remotes.py  storage.py
kapsule-incus-manager/daemon/kim/incus/: client.py
kapsule-incus-manager/daemon/kim/profiles/: library.py
kapsule-incus-manager/daemon/kim/provisioning/: compose.py
kapsule-incus-manager/ui-qml/: CMakeLists.txt
kapsule-incus-manager/ui-qml/app/: CMakeLists.txt
kapsule-incus-manager/ui-qml/app/qml/: Main.qml
kapsule-incus-manager/ui-qml/app/qml/pages/: ClusterPage.qml  ContainersPage.qml  EventsPage.qml  ImagesPage.qml  NetworksPage.qml  OperationsPage.qml  ProfilesPage.qml  ProjectsPage.qml  RemotesPage.qml  StoragePage.qml  VMsPage.qml
kapsule-incus-manager/ui-qml/app/src/: main.cpp
kapsule-incus-manager/ui-qml/lib/: CMakeLists.txt
kapsule-incus-manager/ui-qml/lib/src/: kimclient.cpp  kimclient.h  types.h
kapsule-incus-manager/ui-web/: package.json  tsconfig.json  vite.config.ts
kapsule-incus-manager/ui-web/src/: App.tsx
