[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kim"
version = "0.1.0"
description = "Kapsule-Incus-Manager CLI"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
]

[project.scripts]
kim = "kim.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["kim"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
